--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ name: Build Loongarch64 99pi sd image
 on:
   push:
     branches: [main]
+    paths:
+      - '**'
+      - '!example/**'
 
 jobs:
   build-sd-images:
@@ -38,7 +41,7 @@ jobs:
         with:
           primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
           restore-prefixes-first-match: nix-${{ runner.os }}-
-          gc-max-store-size-linux: 3G
+          gc-max-store-size-linux: 5G
           purge: true
           purge-prefixes: nix-${{ runner.os }}-
           purge-created: 0
