--- a/.github/workflows/build-example.yml
+++ b/.github/workflows/build-example.yml
@@ -51,4 +51,5 @@ jobs:
 
       - name: Build example
         run: |
+          cd example
           nix build .#nixosConfigurations.loongarch64_99pi_tf_custom.config.system.build.toplevel | cachix push loongarch64-cross-test
