fix: use ubuntu 22.04

--- a/.github/workflows/build-example.yml
+++ b/.github/workflows/build-example.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-example:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Maximize build space
