ci: allow pr & manual trigger

--- a/.github/workflows/build-example.yml
+++ b/.github/workflows/build-example.yml
@@ -6,6 +6,10 @@ on:
     paths:
       - '**'
       - '!.github/**'
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 jobs:
   build-example:
